--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p id="topo"></p>
     <header class="header">
       <a class="menu-item" href="https://www.linkedin.com/in/edimilson-luiz/">
-        <img id="logo-meu" src="/imagens/logomarca.png" alt="LogoMarca Edimilson" width="130px"> 
+        <img id="logo-meu" src="imagens/logomarca.png" alt="LogoMarca Edimilson" width="130px"> 
       </a>
 
       <nav>
