--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
        
         <div class="sobre-mim">
           <div id="div">
-            <img id="div-img" src="/imagens/minha-foto.png" alt="foto de edimilson" width="130vh">
+            <img id="div-img" src="imagens/minha-foto.png" alt="foto de edimilson" width="130vh">
             <h3 class="dev"> < O DESENVOLVEDOR  > </h3>
           </div>
 
@@ -98,18 +98,18 @@
               <div class="skill-container">
                 <div class="skill-container-item">
                   <h4>Trabalho em equipe</h4>
-                  <img src="/imagens/imagem-equipe.svg" alt="icone trabalho em equipe" width="200vh">
+                  <img src="imagens/imagem-equipe.svg" alt="icone trabalho em equipe" width="200vh">
                 </div>
 
                 <div class="skill-container-item">
                   <h4>Criatividade</h4>
-                  <img src="/imagens/icone-criatividade.svg" alt="icone Criatividade" width="200vh">
+                  <img src="imagens/icone-criatividade.svg" alt="icone Criatividade" width="200vh">
 
                 </div>
 
                 <div class="skill-container-item">
                   <h4>Resiliência</h4>
-                  <img src="/imagens/icone-painel.svg" alt="icone Resiliência" width="200vh">
+                  <img src="imagens/icone-painel.svg" alt="icone Resiliência" width="200vh">
 
                 </div>
               </div>
@@ -123,7 +123,7 @@
               <div class="container-skill-2">
 
                 <div class="container-item-2">
-                  <img src="/imagens/icone-html.png" alt="icone HTML" width="100px">
+                  <img src="imagens/icone-html.png" alt="icone HTML" width="100px">
                   <h5>HTML5</h5>
 
                   <p>Linguagem de marcação para World Wide Web.
@@ -131,14 +131,14 @@
                 </div>
 
                 <div class="container-item-2">
-                  <img src="/imagens/icone-css.png" alt="icone Css" width="100px">
+                  <img src="imagens/icone-css.png" alt="icone Css" width="100px">
                   <h5>CSS</h5>
                   <p>Cascading Style Sheets é um mecanismo para adicionar estilo a um documento web.
                   </p>
                 </div>
 
                 <div class="container-item-2">
-                  <img src="/imagens/icone-js.png" alt="icone Javascript" width="100px">
+                  <img src="imagens/icone-js.png" alt="icone Javascript" width="100px">
                   <h5>JAVASCRIPT</h5>
                   <p>JavaScript é uma linguagem de programação interpretada e estruturada, de script em alto nível.
                     Responsável por criar interatividade e dinamismo na página.
@@ -146,7 +146,7 @@
                 </div>
 
                 <div class="container-item-2">
-                  <img src="/imagens/icone-python.png" alt="icone python" width="100px">
+                  <img src="imagens/icone-python.png" alt="icone python" width="100px">
                   <h5>PYTHON</h5>
                   <p>Python é uma linguagem de programação de alto nível. 
                     Estruturas desse tipo são, geralmente, classificadas como orientadas a objetos, utilizado no back-end.</p>
